<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gomoku+</string>
    <string name="logoImage">logoImage</string>
    <string name="action_settings">Settings</string>
    <string name="settingButtonString">Settings</string>
    <string name="newGameButton">New Game</string>
    <string name="PlayAiButton">AI Mode</string>
    <string name="MultiplayerButton">MultiPlayer</string>
    <string name="exitButton">Exit</string>
    <string name="aboutButton">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="ruleString">How To Play</string>
    <string name="ruleString2">Be the first to create EXACTLY 5 adjacent stones of the same color VERTICALLY, HORIZONTALLY or DIAGONALLY. \n\nThe line must not be blocked at both ends.</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="title_activity_Multiplayer">Multiplayer</string>
    <string name="NewGameText">New Game Page</string>
    <string name="HowToPlay">How To Play</string>
    <string name="Help">Help</string>
    <string name="Player1">Player1</string>
    <string name="Player2">Player2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="aboutString">Developers</string>
    <string name="who">CS 454/554 Intro to Software Engineering. \n\n\nDeveloped By:\n\n
        Purva Chhatre\n Dany Madden\n Elijah Varga\n Lai Xu </string>
    <string name="settingString">Settings</string>
    <string name="passString">Pass</string>
    <string name="pausedString">Paused</string>
    <string name="title_activity_blank">blank</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pauseString">Game Paused</string>
    <string name="resumeG">Resume</string>
    <string name="pauseExit">   Exit Game   </string>
    <string name="pauseResume">   Resume Game   </string>
    <string name="title_activity_winner_frag">WinnerFrag</string>
    <string name="whiteScore">White: \t</string>
    <string name="blackScore">Black: \t</string>
    <string name="winReset">Play Again</string>
    <string name="winExit">Quit</string>
    <string name="pref_boardsize_default">15</string>
    <string name="pref_boardsize">Board Dimensions</string>
    <string name="pref_boardsize_key">pref_boardsize</string>
    <string name="pref_music">Mute Music</string>
    <string name="title_activity_multiplayer">Multiplayer</string>
    <string name="title_activity_ai">NewGameAI</string>

</resources>
