<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group7.gomoku.WinnerFrag"
    style="@style/customTheme">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:id="@+id/linLay"
        android:layout_height="wrap_content">

        <TextView
            style="@style/GenoaTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/whiteScore"
            android:theme="@style/GenoaTextStyle"
            android:id="@+id/Score"
            android:layout_weight=".45"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLay"
        >

        <Button
            style="@style/btnStyleGenoa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/winExit"
            android:id="@+id/winExit"
            android:theme="@style/btnStyleGenoa"
            android:layout_weight=".5" />

        <Button
            style="@style/btnStyleGenoa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/winReset"
            android:id="@+id/winReset"
            android:theme="@style/btnStyleGenoa"

            android:layout_weight=".5"
            />
    </LinearLayout>

</RelativeLayout>

